# Connect4RESTful

./: .gitignore  C4Restful.cabal  LICENSE  README.md
.stack-work/install/x86_64-osx/lts-8.13/8.0.2/flag-cache/: C4Restful-0.1.0.0
.stack-work/install/x86_64-osx/lts-8.13/8.0.2/share/x86_64-osx-ghc-8.0.2/C4Restful-0.1.0.0/static-files/: game.js  style.css
app/: C4Restful.lhs
static-files/: game.js  index.html
